--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TextToMorse</string>
+    <string name="app_name">Convert</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help please</string>
 </resources>
